flux/academy/media/syncthing/app/deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing@sha256:9026ba9209fa561b4d68ac38659f95620778e2d4336bd1665de25baa507a36f3
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "1000Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8384
          volumeMounts:
            - mountPath: /leech # not leech anymore, but keeping the directory
              name: syncthing-storage
            - mountPath: /config
              name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: syncthing-db
        - name: syncthing-storage
          persistentVolumeClaim:
            claimName: syncthing-storage
